5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1723_2499.log
== SUBMITION (2019-05-09 11:46:27) 
-- CODE:
from math import*

k = int(input("k: "))
soma=0
i=0
fim=k-1
while(i<=fim):
	soma = soma + 1/fatorial(i)
	i = i + 1
print(round(soma, 8))
-- EXECUTION TIME:
0.175836
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2499/main.py", line 8, in <module>
    soma = soma + 1/fatorial(i)
NameError: name 'fatorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:46:29) 
-- CODE:
from math import*

k = int(input("k: "))
soma=0
i=0
fim=k-1
while(i<=fim):
	soma = soma + 1/fatorial(i)
	i = i + 1
print(round(soma, 8))
-- EXECUTION TIME:
0.149717
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2499/main.py", line 8, in <module>
    soma = soma + 1/fatorial(i)
NameError: name 'fatorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:47:16) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i<=fim): 
	soma = soma + 1 / fatorial(i)
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.142803
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2499/main.py", line 9, in <module>
    soma = soma + 1 / fatorial(i)
NameError: name 'fatorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:47:17) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i<=fim): 
	soma = soma + 1 / fatorial(i)
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.151406
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2499/main.py", line 9, in <module>
    soma = soma + 1 / fatorial(i)
NameError: name 'fatorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:47:17) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i<=fim): 
	soma = soma + 1 / fatorial(i)
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.279204
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2499/main.py", line 9, in <module>
    soma = soma + 1 / fatorial(i)
NameError: name 'fatorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:47:18) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i<=fim): 
	soma = soma + 1 / fatorial(i)
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.229114
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2499/main.py", line 9, in <module>
    soma = soma + 1 / fatorial(i)
NameError: name 'fatorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:47:18) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i<=fim): 
	soma = soma + 1 / fatorial(i)
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.338421
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1723/2499/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:47:28) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i <= fim): 
	soma = soma + 1 / fatorial(i)
	i = i + 1
	
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma = soma + 1 / fatorial(i)
NameError: name 'fatorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:47:29) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i <= fim): 
	soma = soma + 1 / fatorial(i)
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.163142
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2499/main.py", line 9, in <module>
    soma = soma + 1 / fatorial(i)
NameError: name 'fatorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:47:31) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i <= fim): 
	soma = soma + 1 / fatorial(i)
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.188713
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2499/main.py", line 9, in <module>
    soma = soma + 1 / fatorial(i)
NameError: name 'fatorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:47:31) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i <= fim): 
	soma = soma + 1 / fatorial(i)
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.224864
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2499/main.py", line 9, in <module>
    soma = soma + 1 / fatorial(i)
NameError: name 'fatorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:47:31) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i <= fim): 
	soma = soma + 1 / fatorial(i)
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.213125
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2499/main.py", line 9, in <module>
    soma = soma + 1 / fatorial(i)
NameError: name 'fatorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:48:41) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i <= fim): 
	soma = soma + 1 / fatorial(i)
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.156161
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2499/main.py", line 9, in <module>
    soma = soma + 1 / fatorial(i)
NameError: name 'fatorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:48:41) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i <= fim): 
	soma = soma + 1 / fatorial(i)
	i = i + 1
	
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma = soma + 1 / fatorial(i)
NameError: name 'fatorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:49:03) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i <= fim): 
	soma = soma + 1 /fatorial(i)
	i = i + 1
	
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma = soma + 1 /fatorial(i)
NameError: name 'fatorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:49:18) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i <= fim): 
	soma = soma + 1 /factorial(i)
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:49:23) 
-- CODE:
from math import*

k = int(input("k: "))
soma = 0
i = 0
fim = k-1

while(i <= fim): 
	soma = soma + 1 /factorial(i)
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.147844
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
